created simple recipe card and corrected readme indentation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
         src="https://images.pexels.com/photos/5711429/pexels-photo-5711429.jpeg?auto=compress&cs=tinysrgb&w=1920&dpr=1"
         alt=""
         class="banner-image utils-absolute" />
-    <h1 class="banner-title utils-absolute">Discover new recipes to make with your family.</h1>
+    <h1 class="banner-title utils-absolute">
+      Discover new recipes to make with your family.
+    </h1>
   </div>
+  <main class="container">
+    <div class="js-recipe-cards-container">
+      <div class="recipe-card">
+        <img
+            src="https://images.unsplash.com/photo-1595295333158-4742f28fbd85?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
+            alt=""
+            class="recipe-card-image" />
+        <div class="recipe-card-body">
+          <h3 class="recipe-card-title">Spaghetti</h3>
+          <button class="button recipe-card-button">Check Recipe</button>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
