--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Recipedia</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
   <div class="banner">
@@ -25,7 +26,18 @@
             alt=""
             class="recipe-card-image" />
         <div class="recipe-card-body">
-          <h3 class="recipe-card-title">Spaghetti</h3>
+          <h4 class="recipe-card-category">Pasta</h4>
+          <h3 class="recipe-card-name">Spaghetti</h3>
+          <div class="utils-flex utils-ai-c utils-gap-1">
+            <span class="utils-flex utils-ai-c utils-gap-0-5">
+              <span class="material-symbols-outlined">schedule</span>
+              <time class="recipe-card-preparation-time">45min</time>
+            </span>
+            <span class="utils-flex utils-ai-c utils-gap-0-5">
+              <span class="material-symbols-outlined ">star</span>
+              <div class="recipe-card-rating">5.0</div>
+            </span>
+          </div>
           <button class="button recipe-card-button">Check Recipe</button>
         </div>
       </div>
