--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
   <title>Recipedia</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <script src="script.js" defer></script>
 </head>
+
+<template class="js-template-recipe-card">
+  <div class="recipe-card">
+    <img
+        src=""
+        alt=""
+        class="recipe-card-image" />
+    <div class="recipe-card-body">
+      <h4 class="recipe-card-category"></h4>
+      <h3 class="recipe-card-name"></h3>
+      <div class="utils-flex utils-ai-c utils-gap-1">
+        <span class="utils-flex utils-ai-c utils-gap-0-5">
+          <span class="material-symbols-outlined">schedule</span>
+          <time class="recipe-card-preparation-time"></time>
+        </span>
+        <span class="utils-flex utils-ai-c utils-gap-0-5">
+          <span class="material-symbols-outlined ">star</span>
+          <div class="recipe-card-rating"></div>
+        </span>
+      </div>
+      <button class="button recipe-card-button">Check Recipe</button>
+    </div>
+  </div>
+</template>
+
 <body>
   <div class="banner">
     <img
@@ -18,29 +44,9 @@
       Discover new recipes to make with your family.
     </h1>
   </div>
+
   <main class="container">
     <div class="js-recipe-cards-container">
-      <div class="recipe-card">
-        <img
-            src="https://images.unsplash.com/photo-1595295333158-4742f28fbd85?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
-            alt=""
-            class="recipe-card-image" />
-        <div class="recipe-card-body">
-          <h4 class="recipe-card-category">Pasta</h4>
-          <h3 class="recipe-card-name">Spaghetti</h3>
-          <div class="utils-flex utils-ai-c utils-gap-1">
-            <span class="utils-flex utils-ai-c utils-gap-0-5">
-              <span class="material-symbols-outlined">schedule</span>
-              <time class="recipe-card-preparation-time">45min</time>
-            </span>
-            <span class="utils-flex utils-ai-c utils-gap-0-5">
-              <span class="material-symbols-outlined ">star</span>
-              <div class="recipe-card-rating">5.0</div>
-            </span>
-          </div>
-          <button class="button recipe-card-button">Check Recipe</button>
-        </div>
-      </div>
     </div>
   </main>
 </body>
