added more fake recipes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         alt=""
         class="recipe-card-image" />
     <div class="recipe-card-body">
-      <h4 class="recipe-card-category"></h4>
+      <span class="recipe-card-category"></span>
       <h3 class="recipe-card-name"></h3>
       <div class="utils-flex utils-ai-c utils-gap-1">
         <span class="utils-flex utils-ai-c utils-gap-0-5">
@@ -46,7 +46,8 @@
   </div>
 
   <main class="container">
-    <div class="js-recipe-cards-container">
+    <h1>Today's highlights</h1>
+    <div class="todays-highlights-container recipes-container">
     </div>
   </main>
 </body>
