changed banner image

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <body>
   <div class="banner">
     <img
-        src="https://images.pexels.com/photos/5711429/pexels-photo-5711429.jpeg?auto=compress&cs=tinysrgb&w=1920&dpr=1"
+        src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&w=1920"
         alt=""
-        class="banner-image utils-absolute" />
+        class="banner-image utils-absolute utils-invert-x" />
     <h1 class="banner-title utils-absolute">
       Discover new recipes to make with your family.
     </h1>
