reorganized script and added community selections section

--- a/index.html
+++ b/index.html
@@ -46,9 +46,14 @@
   </div>
 
   <main class="container">
-    <h1>Today's highlights</h1>
-    <div class="todays-highlights-container recipes-container">
-    </div>
+    <section>
+      <h1>Today's highlights</h1>
+      <div class="todays-highlights-container recipes-container"></div>
+    </section>
+    <section>
+      <h1>Community Selections</h1>
+      <div class="community-selections-container recipes-container"></div>
+    </section>
   </main>
 </body>
 </html>
