--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
 </template>
 
 <body>
+  <header class="page-header">
+    <div class="page-header-container utils-flex utils-ai-c utils-jc-sb">
+      <span class="page-header-logo utils-flex utils-ai-c utils-gap-0-5">
+        <span class="material-symbols-outlined">bakery_dining</span>
+        Recipedia
+      </span>
+      <nav class="page-header-nav utils-flex utils-gap-1">
+        <span class="page-header-nav-item">Articles</span>
+        <span class="page-header-nav-item">Recipes</span>
+      </nav>
+    </div>
+  </header>
+
   <div class="banner">
     <img
         src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&w=1920"
