added footer and screenshot to readme

--- a/index.html
+++ b/index.html
@@ -68,5 +68,13 @@
       <div class="community-selections-container recipes-container"></div>
     </section>
   </main>
+
+  <footer class="page-footer utils-text-center">
+    <p>
+      <a href="https://github.com/f1redr4g0n/recipedia">
+        Check this project on GitHub
+      </a>
+    </p>
+  </footer>
 </body>
 </html>
