added more items to page header and added weekly highlights section

--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
         <span class="material-symbols-outlined">bakery_dining</span>
         Recipedia
       </span>
-      <nav class="page-header-nav utils-flex utils-gap-1">
+      <nav class="page-header-nav utils-flex utils-ai-c utils-gap-1">
+        <span class="page-header-nav-item" data-is-active="true">Home</span>
         <span class="page-header-nav-item">Articles</span>
         <span class="page-header-nav-item">Recipes</span>
+        <span class="material-symbols-outlined utils-cursor-pointer">
+          search
+        </span>
       </nav>
     </div>
   </header>
@@ -62,6 +66,10 @@
     <section>
       <h1>Today's highlights</h1>
       <div class="todays-highlights-container recipes-container"></div>
+    </section>
+    <section>
+      <h1>Weekly highlights</h1>
+      <div class="weekly-highlights-container recipes-container"></div>
     </section>
     <section>
       <h1>Community Selections</h1>
