added zoom-in effect in recipe cards

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 
 <template class="js-template-recipe-card">
   <div class="recipe-card">
-    <img
-        src=""
-        alt=""
-        class="recipe-card-image" />
+    <div class="recipe-card-image-container">
+      <img
+          src=""
+          alt=""
+          class="recipe-card-image" />
+    </div>
     <div class="recipe-card-body">
       <span class="recipe-card-category"></span>
       <h3 class="recipe-card-name"></h3>
