--- a/index.html
+++ b/index.html
@@ -55,12 +55,15 @@
   </header>
 
   <div class="banner">
-    <img
-        src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&w=1920"
+    <div
+        src="https://images.unsplash.com/photo-1505935428862-770b6f24f629?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80"
         alt=""
-        class="banner-image utils-absolute utils-invert-x" />
+        class="banner-image utils-absolute"
+    ></div>
     <h1 class="banner-title utils-absolute">
-      Discover new recipes to make with your family.
+      <span class="material-symbols-outlined banner-title-icon">menu_book</span>
+      Discover new recipes to make<br />
+      with your family.
     </h1>
   </div>
 
